--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.30.1",
     "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.1.8",
+    "react-router-dom": "^7.9.5",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
